Jerrycan/style.css
html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
}

.container {
    width: 85%;
    max-width: 440px;
    margin: 0 auto;
    margin-top: 13rem;
}

.jerrycan-body {
    padding: 14rem 0;
    background: #dddee0;
    /* border-radius: 150px 0 38px 38px; */
    position: relative;
    box-shadow: inset -65px 1px 0px #d6d9dd, inset 65px 1px 0px #d3d5da;
    box-shadow: inset -65px 10px 19px #d8d8d8, inset 65px 0 19px #e6e6e6;
}

.jerrycan-top {
    padding: 4.5rem 0;
    background: #dddee0;
    display: block;
    width: 65%;
    border-radius: 140px 80px 0 0;
    position: absolute;
    top: -8.8rem;
    left: 0;
    right: 0;
    box-shadow: 0 10px 12px -6px #dddee0;
}


/* Handle space */
.jerrycan-top:before {
    content: "";
    position: absolute;
    padding: 2.1rem;
    width: 60%;
    display: block;
    top: 40px;
    left: 4.6rem;
    background: rgb(255, 255, 255);
    border-radius: 30px 30px 50px 50px;
}

.jerrycan-body:before {
    content: "";
    position: absolute;
    padding: 3.2rem;
    width: 39%;
    display: block;
    top: -82px;
    right: 0;
    background: #dddee0;
    border-radius: 0 14px 0 0;
    box-shadow: 0 4px 8px -3px #dddee0;
}


/* jerrycan cover */
.jerrycan-body:after {
    content: "";
    position: absolute;
    padding: 2.3rem;
    width: 24%;
    display: block;
    top: -154.5px;
    right: 20px;
    background-color: #f0f0f2;
    background-image: linear-gradient(90deg, transparent 50%, #e6e6e6 50%);
    background-position: center;
    background-size: 19px 19px;
    border-radius: 7px 7px 0 0;
    box-shadow: inset 0 -13px 0 #dddee0, inset 0 -23px 0 #e6e6e6, inset 0 -28px 0 #dddee0, inset 0 -39px 0 #e6e6e6, inset 0 4.3px 0 #dddee0;
}

.jerrycan-bottom {
    padding: 2rem 0;
    background: #dddee0;
    display: block;
    width: 100%;
    margin: 0 auto;
    border-radius: 0 0 80px 80px;
    position: absolute;
    bottom: -59px;
    left: 0;
    right: 0;
    box-shadow: 0 -10px 10px -6px #dddee0;
}

@media (max-width: 430px) {
    .container {
        width: 70%;
        width: 78%;
        margin-top: 12rem;
    }

    .jerrycan-top {
        padding: 3rem 0;
        border-radius: 80px 50px 0 0;
        position: absolute;
        top: -6rem;
    }

    /* Handle space */
    .jerrycan-top:before {
        padding: 1.35rem;
        top: 27px;
        left: 2.7rem;
    }

    .jerrycan-body {
        padding: 9rem 0;
    }

    /* jerrycan cover */
    .jerrycan-body:after {
        background-size: 12px 12px;
        padding: 1.6rem;
        top: -106.5px;
        right: 20px;
        box-shadow: inset 0 -7px 0 #dddee0, inset 0 -16px 0 #e6e6e6, inset 0 -20px 0 #dddee0, inset 0 -27px 0 #e6e6e6, inset 0 4.3px 0 #dddee0;
    }

    .jerrycan-body:before {
        padding: 2rem;
        top: -55px;
    }

    .jerrycan-bottom {
        padding: 1.2rem 0;
        bottom: -37px;
    }
}

